--- a/locations.html
+++ b/locations.html
@@ -29,6 +29,12 @@
 							<li><a href="#">Contact Us</a></li>
 							<li><a href="#">About Us</a></li>
 						</ul>
+						<ul>
+							<li><a href="main.html">Home</a></li>
+							<li><a href="#">Site Map</a></li>
+							<li><a href="#">Contact Us</a></li>
+							<li><a href="#">About Us</a></li>
+						</ul>
 					</div>
 				</div>
 				<div class="lower_navbar">
