--- a/main.html
+++ b/main.html
@@ -42,6 +42,12 @@
 									<li><a href="locations.html">Cities & Other Locations</a></li>
 								</ul>
 							</li>
+							<li><a href="">Where to go<i class="fas fa-caret-down"></i></a>
+								<ul>
+									<li><a href="attractions.html">Attractive Destinations</a></li>
+									<li><a href="locations.html">Cities & Other Locations</a></li>
+								</ul>
+							</li>
 							<li><a href="">Plan your trip<i class="fas fa-caret-down"></i></a>
 								<ul>
 									<li><a href="accomodations.html">Book an Accomodation</a></li>
